--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>js-guide</title>
   <script src="part_1.js"></script>
+  <script src="part_2.js"></script>
 </head>
 <body>
   
